# TransientAnalyzer

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  make.bat  requirements.txt  run.bat
docs/Example/: Example.ipynb  TransientAnalyzerGuide.ipynb
docs/rst/: TransientAnalyzer.rst  modules.rst
src/TransientAnalyzer/: EMOneDimGaussian.py  LinearGibbs.py  TransientAnalyzer.py
src/example_package_IuliiaBaglaeva/: TransientAnalyzer.py
