[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TransientAnalyzer"
version = "1.1.3"
authors = [
  { name="Iuliia Baglaeva, Bogdan Iaparov, Ivan Zahradník, Alexandra Zahradníková", email="iuliia.baglaeva@savba.sk" },
]
description = "Gaussian process regression-based analysis of noisy transient signals."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"gpflow",
	"pandas",
	"numpy",
	"scipy",
	"pybaselines",
	'importlib-metadata; python_version>="3.7"',
]

[project.urls]
"Homepage" = "https://github.com/IuliiaBaglaeva/TransientAnalyzer"
"Bug Tracker" = "https://github.com/IuliiaBaglaeva/TransientAnalyzer/issues"